[package]
name = "pathfinder_canvas_drawimage_repo"
version = "0.1.0"
authors = ["Maxwell Huang-Hobbs <mhuan13@gmail.com>"]
edition = "2018"

[dependencies]
image = "0.23.14"
pathfinder_canvas = { git = "https://github.com/servo/pathfinder.git", rev = "6ce65b29dfc5074811eed66b1a90a813249e67c2" }
pathfinder_color = { git = "https://github.com/servo/pathfinder.git", rev = "6ce65b29dfc5074811eed66b1a90a813249e67c2" }
pathfinder_content = { git = "https://github.com/servo/pathfinder.git", rev = "6ce65b29dfc5074811eed66b1a90a813249e67c2" }
pathfinder_geometry = { git = "https://github.com/servo/pathfinder.git", rev = "6ce65b29dfc5074811eed66b1a90a813249e67c2" }
pathfinder_renderer = { git = "https://github.com/servo/pathfinder.git", rev = "6ce65b29dfc5074811eed66b1a90a813249e67c2" }
pathfinder_export = { git = "https://github.com/servo/pathfinder.git", rev = "6ce65b29dfc5074811eed66b1a90a813249e67c2" }
pathfinder_gl = { git = "https://github.com/servo/pathfinder.git", rev = "6ce65b29dfc5074811eed66b1a90a813249e67c2" }
pathfinder_resources = { git = "https://github.com/servo/pathfinder.git", rev = "6ce65b29dfc5074811eed66b1a90a813249e67c2" }
sdl2 = "0.35.1"
gl = "0.14.0"

[[bin]]
name = "canvastest"
path = "src/main.rs"
